fix search visual overflow & auto close on blur

--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -6,3 +6,7 @@
 .dropdown {
     width: 500px !important;
 }
+
+.dropdown :global(.ant-dropdown-menu-title-content) {
+    min-width: 0;
+}
